fixed an issue with resizing causing the second to last page to appear on the right side.  Also refactored layout to make bottom container have scrollbars when user zooms in rather than scrollbars on the viewport

--- a/include/css/index.scss
+++ b/include/css/index.scss
@@ -13,6 +13,11 @@ html, body {
     background-color: #ffffff;
 }
 
+body {
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
+
 #banner {
     font-size: 14px;
     padding: 5px 10px 5px 10px;
@@ -38,10 +43,8 @@ html, body {
 }
 
 #pdf-container {
-    //display: flex;
-    //justify-content: center;
-    //align-items: flex-start;
     white-space: nowrap;
+    overflow: auto;
 
     canvas {
         background-color: #ccc;
